test/pass/enums_and_variants/enum_class_member_function.lly
enum class Option[A] {
    Some(A)
    None

    define or_else[A](other: A => A) {
        match self: {
            case Some(s):
                return s
            case None:
                return other
        }
    }
}

if Option::or_else(Some(1), 2) != 1:
    stderr.write("Failed.\n")

